# github-rust-publish

./: .gitignore  Cargo.toml  Readme.md  action.yml  index.js  package-lock.json  package.json  readme.md
.config/: RustPublish.toml  rust-publish.toml
.github/workflows/: test.yml
.run/: build-wasi.sh  npm-install.js
projects/publish-rs/: Cargo.toml
projects/publish-rs/src/: bindings.rs  lib.rs  main.rs
projects/publish-rs/src/commands/: mod.rs
projects/publish-rs/src/commands/cmd_build/: mod.rs
projects/publish-rs/src/commands/cmd_decode/: mod.rs
projects/publish-rs/src/commands/cmd_encode/: mod.rs
projects/publish-rs/src/commands/cmd_polyfill/: mod.rs
projects/publish-rs/src/commands/cmd_run/: mod.rs
projects/publish-rs/src/errors/: convert.rs  mod.rs
projects/publish-rs/src/helpers/: github_arch.rs  github_os.rs  mod.rs
projects/publish-rs/wit/: world.wit
projects/publish-wasm32-wasi/: .gitignore  .npmignore  action.yml  package.json  rust-publish.js
src/: index.core.wasm  index.core2.wasm  index.d.ts  index.js
src/interfaces/: wasi-cli-environment.d.ts  wasi-filesystem-types.d.ts
