[package]
name = "github"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Valkyrie workspace manager"
repository = "https://github.com/nyar-vm/valkyrie-valor"
documentation = "https://docs.rs/valor-config"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["socks"] }
tokio = { version = "1.43.0", features = ["rt", "macros"] }
tempfile = { version = "3.16.0", features = ["nightly"] }
cargo_toml = "0.21.0"

[dev-dependencies]

[features]
default = []

[package.metadata.component]
package = "legion:tools"
